[package]
name = "validate_geographiclib"
version = "0.1.0"
authors = ["Michael Kirk <michael.code@endoftheworl.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: figure out the subset of features we need vs. "full"
tokio = { version = "0.2", features = ["full"] }
geographiclib-rs = { path = "../geographiclib-rs" }
